@@ -2,32 +2,49 @@ package com.ftn.sbnz.service.services;
 
 import com.ftn.sbnz.model.models.Breakdown;
 import com.ftn.sbnz.model.models.Car;
+import com.ftn.sbnz.model.models.ElectricCar;
 import com.ftn.sbnz.model.models.Lamp;
 import com.ftn.sbnz.model.models.LampKind;
 import com.ftn.sbnz.model.models.Repairment;
 import com.ftn.sbnz.model.models.Symptom;
+import com.ftn.sbnz.model.models.battery.Battery;
+import com.ftn.sbnz.model.models.battery.events.CurrentReadingEvent;
+import com.ftn.sbnz.model.models.battery.events.VoltageReadingEvent;
+import com.ftn.sbnz.service.dtos.breakdown.BatteryCheckDTO;
 import com.ftn.sbnz.service.dtos.breakdown.BreakdownDTO;
 import com.ftn.sbnz.service.dtos.breakdown.CreateBreakdownDTO;
+import com.ftn.sbnz.service.dtos.breakdown.CurrentReadingDTO;
 import com.ftn.sbnz.service.dtos.repairment.RepairmentDTO;
 import com.ftn.sbnz.service.exceptions.NotFoundException;
 import com.ftn.sbnz.service.repositories.IBreakdownRepository;
 import com.ftn.sbnz.service.repositories.ICarRepository;
+import com.ftn.sbnz.service.repositories.IElectricCarRepository;
 import com.ftn.sbnz.service.repositories.ILampRepository;
 import com.ftn.sbnz.service.repositories.IRepairmentRepository;
 import com.ftn.sbnz.service.services.interfaces.IBreakdownService;
+
 import com.ftn.sbnz.service.services.interfaces.ITemplateService;
+
+import com.ftn.util.Simulation;
 import com.ftn.util.Util;
 
+import org.drools.core.time.SessionPseudoClock;
 import org.kie.api.KieServices;
 import org.kie.api.runtime.KieContainer;
 import org.kie.api.runtime.KieSession;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 @Service
@@ -47,12 +64,20 @@ public class BreakdownService implements IBreakdownService {
     @Autowired
     private ITemplateService templateService;
 
+    private IElectricCarRepository electricCarRepository;
+
+
     private KieSession kSession;
 
+    private KieSession cepKSession;
+    private KieContainer container;
+
     public BreakdownService(){
-        KieContainer container = KieServices.Factory.get().getKieClasspathContainer();
+        container = KieServices.Factory.get().getKieClasspathContainer();
         // System.out.println(container);
         kSession = container.newKieSession("carKsession");
+        cepKSession = container.newKieSession("cepKsession");
+       
     }
 
     // @Autowired
@@ -98,7 +123,7 @@ public class BreakdownService implements IBreakdownService {
         List<Repairment> previous = kSession.getObjects().stream()
         .filter(r -> r instanceof Repairment)
         .map(r -> (Repairment) r)
-        .toList();
+        .collect(Collectors.toList());
 
      
         kSession.insert(breakdown);
@@ -109,13 +134,14 @@ public class BreakdownService implements IBreakdownService {
          List<Repairment> after = kSession.getObjects().stream()
         .filter(r -> r instanceof Repairment)
         .map(r -> (Repairment) r)
-        .toList();
+        .collect(Collectors.toList());
 
          List<Repairment> newReps = Util.getListDiff(after, previous).stream().toList();
          newReps = this.templateService.checkDiscount(newReps);
          return newReps.stream().map(r -> new RepairmentDTO(r)).toList();
         // after - previous
 //        return Util.getListDiff(after, previous).stream().map(r -> new RepairmentDTO(r)).toList();
+     //   return Util.getListDiff(after, previous).stream().map(r -> new RepairmentDTO(r)).collect(Collectors.toList());
 
     }
 
@@ -133,5 +159,130 @@ public class BreakdownService implements IBreakdownService {
                 stringValues.add(symptom.getStringValue());
         }
         return stringValues;
+    }
+
+    @Override
+    public BatteryCheckDTO checkBattery(int carId, int caseScenarion) throws InterruptedException, NotFoundException {
+           Breakdown breakdown = new Breakdown();
+
+        //    TODO check if electrical
+        if(!carRepository.existsById(carId))
+            throw new NotFoundException();
+
+        breakdown.setName("Battery check");
+        ElectricCar car = electricCarRepository.findById(carId).orElseThrow(NotFoundException::new);
+        breakdown.setCar(car);
+
+        breakdown = breakdownRepository.save(breakdown);
+
+        // get newly created objects
+        cepKSession = container.newKieSession("cepKsession");
+        List<Repairment> previous = cepKSession.getObjects().stream()
+        .filter(r -> r instanceof Repairment)
+        .map(r -> (Repairment) r)
+        .collect(Collectors.toList());
+
+        Battery battery = car.getBattery();
+        battery.setCurrentBreakdownId(breakdown.getId());
+        
+        double scale = 20.0;
+        cepKSession.setGlobal("tolerance", 0.01);
+  
+        LocalDateTime now = LocalDateTime.now();
+        SessionPseudoClock clock = cepKSession.getSessionClock();
+         SimpleDateFormat formatter = new SimpleDateFormat("dd-MMM-yyyy HH:mm:ss");
+        // cepKSession.setGlobal("globalStartTime", LocalDateTime.now().);
+        //  cepKSession.setGlobal("initPassed", false);
+
+        double currentValue = Simulation.calculateValue(scale, now.toLocalTime());
+        double voltageValue = Simulation.calculateValue(scale, now.toLocalTime());
+        System.out.println(currentValue);
+        System.out.println(voltageValue);
+        cepKSession.insert(battery);
+        cepKSession.insert(breakdown);
+
+        if(caseScenarion == 1){
+            do{
+                    CurrentReadingEvent currentReadingEvent = new CurrentReadingEvent(currentValue, 1L, Util.localToDate(now));
+                    VoltageReadingEvent voltageEvent = new VoltageReadingEvent(voltageValue, 1L, Util.localToDate(now));
+
+                    cepKSession.insert(voltageEvent);
+                    cepKSession.insert(currentReadingEvent);
+                    cepKSession.getAgenda().getAgendaGroup("checking battery").setFocus();
+                    cepKSession.fireAllRules();
+                    cepKSession.halt();
+                    System.out.println(currentValue);
+                    //   System.out.println(voltageValue);
+                    // Thread.sleep(100);
+
+                    // advance time
+                    clock.advanceTime( 1, TimeUnit.SECONDS );
+                    now = now.plusSeconds(1);
+
+
+                    currentValue = Simulation.calculateValue(scale, now.toLocalTime());
+                    voltageValue = Simulation.calculateValue(scale, now.toLocalTime());
+                    System.out.println(now.toString());
+                    //  System.out.println(clock.getCurrentTime().toString());
+                
+                }while(!Simulation.finished);
+                Simulation.lastStart = null;
+                Simulation.finished = false;
+        }
+        else{
+            CurrentReadingEvent currentReadingEvent = new CurrentReadingEvent(currentValue, 1L, Util.localToDate(now));
+            VoltageReadingEvent voltageEvent = new VoltageReadingEvent(voltageValue, 1L, Util.localToDate(now));
+
+            cepKSession.insert(voltageEvent);
+            cepKSession.insert(currentReadingEvent);
+            cepKSession.getAgenda().getAgendaGroup("checking battery").setFocus();
+            cepKSession.fireAllRules();
+            cepKSession.halt();
+              System.out.println(currentValue);
+            //   System.out.println(voltageValue);
+            // Thread.sleep(100);
+
+            // advance time
+            clock.advanceTime( 80, TimeUnit.SECONDS );
+            now = now.plusSeconds(80);
+
+            currentReadingEvent = new CurrentReadingEvent(currentValue, 1L, Util.localToDate(now));
+            voltageEvent = new VoltageReadingEvent(voltageValue, 1L, Util.localToDate(now));
+
+            cepKSession.getAgenda().getAgendaGroup("checking battery").setFocus();
+            cepKSession.fireAllRules();
+            cepKSession.halt();
+          
+            Simulation.lastStart = null;
+            Simulation.finished = false;
+        }
+
+      
+  
+
+     
+        // cepKSession.insert(breakdown);
+        // int ruleCount = cepKSession.fireAllRules();
+        // System.out.println(ruleCount);
+
+        // cepKSession.halt();
+         List<Repairment> after = cepKSession.getObjects().stream()
+        .filter(r -> r instanceof Repairment)
+        .map(r -> (Repairment) r)
+         .collect(Collectors.toList());
+
+        BatteryCheckDTO dto = new BatteryCheckDTO();
+        dto.setRepairments(Util.getListDiff(after, previous).stream().map(r -> new RepairmentDTO(r)).collect(Collectors.toList()));
+        List<CurrentReadingDTO> readingDTOs = cepKSession.getObjects().stream()
+        .filter(a -> a instanceof CurrentReadingEvent)
+        .map(a -> CurrentReadingDTO.toDTO((CurrentReadingEvent)a))
+        .collect(Collectors.toList());
+        
+        dto.setCurrentReadings(readingDTOs);
+
+        cepKSession.dispose();
+
+        // after - previous
+        return dto;
     }
 }
